[package]
name = "{{ project_name }}"
version = "0.0.1"
edition = "2021"
authors = [ "{{ git_author }}" ]
{% if license != 'None' %}license = "{{ license }}"
{% endif -%}
{% if 'deb' in package_types -%}description = "The Rust {{ project_name }} tool."
{% endif -%}

{% if 'deb' in package_types %}
[package.metadata.deb]
extended-description = "{{ project_name }}"
{% endif -%}

{% if 'rpm' in package_types %}
[package.metadata.generate-rpm]
{#
Cargo.toml uses SPDX 2.1 license expression identifiers. RPM switched to SPDX too.
No conversion necessary.
See:
  - https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields
  - https://docs.fedoraproject.org/en-US/legal/allowed-licenses/
  - https://docs.fedoraproject.org/en-US/legal/license-field/
-#}
assets = [
  { source = "target/release/{{ project_name }}", dest = "/usr/bin/{{ project_name }}", mode = "755" },
]
{%- endif %}
